--- a/Legacy.bib
+++ b/Legacy.bib
@@ -68,13 +68,14 @@ title = {{A reference panel of 64,976 haplotypes for genotype imputation}},
 year = {2016}
 }
 @article{Aikens2018,
-abstract = {Our understanding of mutation rate helps us build evolutionary models and make sense of genetic variation. Recent work indicates that the frequencies of specific mutation types have been elevated in Europe, and that many more, subtler signatures of global polymorphism variation may yet remain unidentified. Here, we present an analysis of the 1,000 Genomes Project (phase 3), suggesting additional putative signatures of mutation rate variation across populations and the extent to which they are shaped by local sequence context. First, we compiled a list of the most significantly variable polymorphism types in a cross-continental statistical test. Clustering polymorphisms together, we observed four sets of substitution types that showed similar trends of relative mutation rate across populations, and describe the patterns of these mutational clusters among continental groups. For the majority of these signatures, we found that a single flanking base pair of sequence context was sufficient to determine the majority of enrichment or depletion of a mutation type. However, local genetic context up to 2-3 base pairs away contributes additional variability, and helps to interpret a previously noted enrichment of certain polymorphism types in some East Asian groups. Building our understanding of mutation rate in this way can help us to construct more accurate evolutionary models and better understand the mechanisms that underlie genetic change.},
-author = {Aikens, Rachael C and Johnson, Kelsey E and Voight, Benjamin F},
-journal = {bioRxiv},
-month = {jan},
-title = {{Signals of variation in human mutation rate at multiple levels of sequence context}},
-url = {http://biorxiv.org/content/early/2018/08/04/385096.abstract},
-year = {2018}
+    author = {Aikens, Rachael C and Johnson, Kelsey E and Voight, Benjamin F},
+    title = "{Signals of Variation in Human Mutation Rate at Multiple Levels of Sequence Context}",
+    journal = {Molecular Biology and Evolution},
+    year = {2019},
+    month = {02},
+    doi = {10.1093/molbev/msz023},
+    url = {https://doi.org/10.1093/molbev/msz023},
+    eprint = {http://oup.prod.sis.lan/mbe/advance-article-pdf/doi/10.1093/molbev/msz023/28082857/msz023.pdf},
 }
 @article{Benjamini2006,
 abstract = {S The linear step-up multiple testing procedure controls the false discovery rate at the desired level q for independent and positively dependent test statistics. When all null hypotheses are true, and the test statistics are independent and continuous, the bound is sharp. When some of the null hypotheses are not true, the procedure is conservative by a factor which is the proportion m 0 /m of the true null hypotheses among the hypotheses. We provide a new two-stage procedure in which the linear step-up procedure is used in stage one to estimate m 0 , providing a new level q∞ which is used in the linear step-up procedure in the second stage. We prove that a general form of the two-stage procedure controls the false discovery rate at the desired level q. This framework enables us to study analytically the properties of other procedures that exist in the literature. A simulation study is presented that shows that two-stage adaptive procedures improve in power over the original procedure, mainly because they provide tighter control of the false discovery rate. We further study the performance of the current suggestions, some variations of the procedures, and previous suggestions, in the case where the test statistics are positively dependent, a case for which the original procedure controls the false discovery rate. In the setting studied here the newly proposed two-stage procedure is the only one that controls the false discovery rate. The procedures are illustrated with two examples of biological importance. 1. I The traditional concern when testing m hypotheses simultaneously is to control the familywise error rate, the probability of making any false discovery. The restrictiveness of 492 Y. B, A. M. K  D. Y the familywise error rate criterion leads to multiple testing procedures that are not powerful in the sense that the probability of rejecting null hypotheses that are false must also be small. At the other extreme lies the strategy of ignoring the multiplicity issue altogether, and testing each hypothesis at level a. This is a popular approach which increases the probability of rejecting null hypotheses that are false, but ignores the increased expected number of type I errors. The false discovery rate criterion was developed by Benjamini {\&} Hochberg (1995) to bridge these two extremes. The false discovery rate is the expectation of the proportion of rejected true null hypotheses among the rejected hypotheses. When the null hypothesis is true for all hypotheses, the false discovery rate and familywise error rate criteria are equivalent. However, when there are some hypotheses for which the null hypotheses are false, a procedure that controls the false discovery rate may reject many more such hypotheses at the expense of a small proportion of erroneous rejections. The linear step-up procedure, or so-called Benjamini {\&} Hochberg procedure, controls the false discovery rate at a desired level qm 0 /m when the test statistics are independent (Benjamini {\&} Hochberg, 1995) or positively dependent (Benjamini {\&} Yekutieli, 2001). Even though this procedure rejects false null hypotheses more frequently than procedures that control the familywise error rate, if we knew m 0 the procedure could be improved by using q∞=qm/m 0 , to achieve precisely the desired level q. In this paper we develop and compare some adaptive false discovery rate controlling procedures that begin by estimating m 0 . In 2, we recall the formal definition of the false discovery rate criterion, the linear step-up procedure, and review the background for the problem at hand. 2. B 2{\textperiodcentered}1. T he false discovery rate Let H 0i (i=1, . . . , m) be the tested null hypotheses. For i=1, . . . , m 0 the null hypotheses are true, and for the remaining m 1 =m−m 0 the null hypotheses are false. Let V denote the number of true null hypotheses that are erroneously rejected and let R be the total number of hypotheses that are rejected. Now define the proportion of false discoveries by Q=V /R if R{\textgreater}0 and Q=0 if R=0. The false discovery rate is  =E(Q) (Benjamini {\&} Hochberg, 1995). A few recent papers have illuminated the false discovery rate from different points of view, namely asymptotic, Bayesian, empirical Bayes, as the limit of empirical processes and in the context of penalised model selection; see Efron et al. (2001), Storey (2002), Genovese {\&} Wasserman (2004) and Abramovich et al. (2006). Some of the studies emphasised variants of the false discovery rate, such as its conditional value given that some discovery is made (Storey, 2002), or the distribution of the proportion of false discoveries itself (Genovese {\&} Wasserman, 2004). Procedures were developed for specific settings (Troendle, 1999), and the applicability of existing procedures have been studied; see for example Sarkar (2002). The linear step-up procedure makes use of the m p-values, P=(P 1 , . . . , P m). Let p (1) ∏ . . . ∏p (m) be their ordered observed values.},
